Bug 218233 - System hangs while doing s2idle stress test with Intel BE200
Summary: System hangs while doing s2idle stress test with Intel BE200
Status: CLOSED CODE_FIX
Alias: None
Product: Networking
Classification: Unclassified
Component: Wireless (show other bugs)
Hardware: Intel Linux
: P3 blocking
Assignee: networking_wireless@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-06 02:11 UTC by AceLan Kao
Modified: 2024-01-15 03:02 UTC (History)
1 user (show)

See Also:
Kernel Version:
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg.log (203.83 KB, text/plain)
2023-12-06 02:11 UTC, AceLan Kao
Details

Description AceLan Kao 2023-12-06 02:11:21 UTC
Created attachment 305543 [details]
dmesg.log

Kernel: mainline 6.7.0-rc2-f1a09972a45a+

While doing s2idle stress test, it may hang randomly.
Tried latest iwlwifi firmware, but no luck

Tried the backport-iwlwifi driver, and can't reproduce this issue.
https://git.kernel.org/pub/scm/linux/kernel/git/iwlwifi/backport-iwlwifi.git/

There are many non-upstream commits in the backport-iwlwifi, can someone share some light of which commits I can try?
Thanks.

Using -86 firmware
[ 4.196520] ubuntu kernel: iwlwifi 0000:71:00.0: api flags index 2 larger than supported by driver
[ 4.196569] ubuntu kernel: iwlwifi 0000:71:00.0: TLV_FW_FSEQ_VERSION: FSEQ Version: 0.0.4.125
[ 4.197230] ubuntu kernel: iwlwifi 0000:71:00.0: loaded firmware version 86.fb5c9aeb.0 gl-c0-fm-c0-86.ucode op_mode iwlmvm

Final message
[ 834.879008] ubuntu kernel: iwlwifi 0000:71:00.0: WRT: Invalid buffer destination
[ 835.261442] ubuntu kernel: debugfs: Directory 'iwlmvm' with parent 'netdev:wlp113s0f0' already present!
[ 835.261449] ubuntu kernel: iwlwifi 0000:71:00.0: Failed to create debugfs directory under netdev:wlp113s0f0
[ 838.251554] ubuntu kernel: BUG: unable to handle page fault for address: 00000ff81f043e78
Comment 1 AceLan Kao 2023-12-11 01:50:54 UTC
With core80 branch, still can't reproduce this issue with the latest support commit
   ca4786fd0 wifi: iwlwifi: bump FW API to 83 for AX/BZ/SC devices

We can't enable the BE200 without this commit as the lowest version of the firmware is 83.
Looks like the commit we're looking for is in core79 or below.
Comment 3 Emmanuel Grumbach 2024-01-11 13:06:47 UTC
please re-open if needed.
I'll keep see the messages being added here.
Comment 4 AceLan Kao 2024-01-15 03:02:15 UTC
The fix works well, tried s2idle 1500 interations and the system keeps working.
Thanks.

Note You need to log in before you can comment on or make changes to this bug.